# owt-server

scripts/: build.json
source/agent/analytics/: analytics-agent.js  dist.json  index.js  log4js_configuration.json
source/agent/analytics/videoGstPipeline/: VideoGstAnalyzer.cc  VideoGstAnalyzer.h  VideoGstAnalyzerWrapper.cc  VideoGstAnalyzerWrapper.h  binding.pipeline.gyp  test.js
source/agent/conference/: accessController.js  conference.js  roomController.js  rpcRequest.js
source/agent/plugins/gst/gst-plugin_facerecognition/: Makefile
source/agent/plugins/gst/gst-plugin_facerecognition/src/: Makefile  Makefile.am  gstfacerecognition.c  gstfacerecognition.h  libgstfacerecognition.la  libgstfacerecognition_la-gstfacerecognition.lo  libgstfacerecognition_la-myplugin.lo  libgstfacerecognition_la-wrapper.lo
source/agent/plugins/gst/gst-plugin_facerecognition/src/.deps/: libgstanalytics_la-gstanalytics.Plo  libgstanalytics_la-myplugin.Plo  libgstanalytics_la-wrapper.Plo  libgstfacerecognition_la-gstfacerecognition.Plo  libgstfacerecognition_la-myplugin.Plo  libgstfacerecognition_la-wrapper.Plo
source/agent/plugins/gst/gst-plugin_facerecognition/src/.libs/: libgstfacerecognition.exp  libgstfacerecognition.la  libgstfacerecognition.lai
source/agent/plugins/gst/gst-plugin_facerecognition/src/caseFaceRecognition/: myplugin.cc  myplugin.h  wrapper.cpp  wrapper.h
source/agent/plugins/gst/gst-plugin_facerecognition/src/include/: analytics_buffer.h
source/agent/plugins/gst/gst-plugin_receiveData/: Makefile
source/agent/plugins/gst/gst-plugin_receiveData/src/: Makefile  Makefile.am  gstreceivedata.c  gstreceivedata.h  libgstreceivedata.la  libgstreceivedata_la-RawTransport.lo  libgstreceivedata_la-Server.lo  libgstreceivedata_la-gstreceivedata.lo  libgstreceivedata_la-wrapper.lo
source/agent/plugins/gst/gst-plugin_receiveData/src/.deps/: libgstreceivedata_la-RawTransport.Plo  libgstreceivedata_la-Server.Plo  libgstreceivedata_la-gstreceivedata.Plo  libgstreceivedata_la-marshal.Plo  libgstreceivedata_la-wrapper.Plo
source/agent/plugins/gst/gst-plugin_receiveData/src/.libs/: libgstreceivedata.exp  libgstreceivedata.la  libgstreceivedata.lai
source/agent/plugins/gst/gst-plugin_receiveData/src/case/: RawTransport.cpp  RawTransport.h  RawTransportListenerImpl.h  Server.cpp  wrapper.cpp  wrapper.h
source/agent/plugins/gst/gst-plugin_sendData/: Makefile
source/agent/plugins/gst/gst-plugin_sendData/src/: Makefile  Makefile.am  gstsenddata.c  gstsenddata.h  libgstsenddata.la  libgstsenddata_la-RawTransport.lo  libgstsenddata_la-Server.lo  libgstsenddata_la-gstsenddata.lo  libgstsenddata_la-wrapper.lo
source/agent/plugins/gst/gst-plugin_sendData/src/.deps/: libgstsenddata_la-RawTransport.Plo  libgstsenddata_la-Server.Plo  libgstsenddata_la-gstsenddata.Plo  libgstsenddata_la-wrapper.Plo
source/agent/plugins/gst/gst-plugin_sendData/src/.libs/: libgstsenddata.exp  libgstsenddata.la  libgstsenddata.lai
source/agent/plugins/gst/gst-plugin_sendData/src/case/: RawTransport.cpp  RawTransportListenerImpl.h  Server.back.cpp  Server.back.h  Server.cpp  Server.h  wrapper.cpp  wrapper.h
source/agent/plugins/gst/gst-plugin_sendSink/: Makefile
source/agent/plugins/gst/gst-plugin_sendSink/src/: Makefile  Makefile.am  gstsendsink.c  gstsendsink.h  libgstsendsink.la  libgstsendsink_la-RawTransport.lo  libgstsendsink_la-gstsendsink.lo  libgstsendsink_la-wrapper.lo
source/agent/plugins/gst/gst-plugin_sendSink/src/.deps/: libgstsendsink_la-RawTransport.Plo  libgstsendsink_la-gstsendsink.Plo  libgstsendsink_la-wrapper.Plo
source/agent/plugins/gst/gst-plugin_sendSink/src/.libs/: libgstsendsink.exp  libgstsendsink.la  libgstsendsink.lai
source/agent/plugins/gst/gst-plugin_sendSink/src/case/: RawTransport.h  RawTransportListenerImpl.h  wrapper.cpp  wrapper.h
source/agent/video/videoTranscoder/: VideoFrameTranscoderImpl.h  VideoTranscoder.h
source/management_api/: api.js  requestHandler.js
source/management_api/resource/: analyticsResource.js
